src/PackBuild/objects/System_Property__mdt/System_Property__mdt.object-meta.xml
<CustomObject>
    <description>System Properties related to Package Builder Managed Package</description>
    <label>System Property</label>
    <pluralLabel>System Properties</pluralLabel>
</CustomObject>