src/PackBuild/objects/System_Property__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if a setting is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>